konting revision sa login page

--- a/templates/login.html
+++ b/templates/login.html
@@ -133,10 +133,10 @@
             <input type="password" placeholder="Password" class="form-control" id="password" name="password" required>
             <i class='bx bxs-lock-alt' ></i>
           </div>
-          <button type="submit" class="btn">Login</button>
-          <div class="register-link">
-            <p>Dont have an account? <a href="#">Register</a></p>
+          <div class="remember-forgot">
+            <label><input type="checkbox">Remember Me</label>
           </div>
+          <button type="submit" class="btn btn-primary">Login</button>
         </form>
       </div>
 </body>
