--- a/templates/home.html
+++ b/templates/home.html
@@ -5,17 +5,157 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Boxicons CDN -->
+    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+    <style>
+        /* Custom styles for the sidebar */
+        .sidebar {
+            height: 100vh;
+            background-color: #f8f9fa;
+        }
+
+        .nav-link {
+            color: #333;
+            display: flex;
+            align-items: center;
+            font-size: 1rem;
+        }
+
+        .nav-link i {
+            margin-right: 10px;
+            font-size: 1.2rem;
+        }
+
+        .nav-link:hover {
+            background-color: #e9ecef;
+            border-radius: 5px;
+        }
+
+        /* Ensure the offcanvas is on the left side */
+        .offcanvas-start {
+            width: 250px;
+        }
+
+        /* Position the hamburger icon at the top-left of the screen */
+        .navbar-toggler {
+            border: none;
+            background: transparent;
+        }
+
+        .navbar-toggler-icon {
+            font-size: 1.5rem;
+            color: #333;
+        }
+
+        @media (max-width: 767.98px) {
+            /* Align the button to the top-left corner on mobile screens */
+            .navbar-toggler {
+                position: fixed;
+                top: 10px;
+                left: 10px;
+                z-index: 1031;
+            }
+        }
+    </style>
 </head>
 <body>
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1">Home</span>
-            <a href="{{ url_for('logout') }}" class="btn btn-outline-danger">Logout</a>
+    <div class="container-fluid">
+        <div class="row">
+            <!-- Toggler for mobile view with Boxicons hamburger icon -->
+            <div class="d-md-none">
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSidebar" aria-controls="offcanvasSidebar">
+                    <i class='bx bx-menu navbar-toggler-icon'></i>
+                </button>
+            </div>
+
+            <!-- Sidebar for larger screens / Offcanvas for smaller screens -->
+            <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+                <ul class="nav flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">
+                            <i class='bx bx-box'></i>
+                            Inventory
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <i class='bx bx-bell'></i>
+                            Notification
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <i class='bx bx-cabinet'></i>
+                            Cabinet
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <i class='bx bx-cog'></i>
+                            Account Settings
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" href="{{ url_for('logout') }}">
+                            <i class='bx bx-log-out'></i>
+                            Logout
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+
+            <!-- Offcanvas Sidebar for mobile -->
+            <div class="offcanvas offcanvas-start d-md-none" tabindex="-1" id="offcanvasSidebar" aria-labelledby="offcanvasSidebarLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasSidebarLabel">Menu</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">
+                                <i class='bx bx-box'></i>
+                                Inventory
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class='bx bx-bell'></i>
+                                Notification
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class='bx bx-cabinet'></i>
+                                Cabinet
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class='bx bx-cog'></i>
+                                Account Settings
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-danger" href="{{ url_for('logout') }}">
+                                <i class='bx bx-log-out'></i>
+                                Logout
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Main content -->
+            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                    <h1 class="h2">Welcome, {{ user }}!</h1>
+                </div>
+                <p>This is your home page content. You can add more sections here as needed.</p>
+            </main>
         </div>
-    </nav>
-    <div class="container mt-5">
-        <h3>Welcome, {{ user }}!</h3>
-        <p>You are now logged in.</p>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
