--- a/templates/home.html
+++ b/templates/home.html
@@ -7,56 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Boxicons CDN -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-    <style>
-        /* Custom styles for the sidebar */
-        .sidebar {
-            height: 100vh;
-            background-color: #f8f9fa;
-        }
-
-        .nav-link {
-            color: #333;
-            display: flex;
-            align-items: center;
-            font-size: 1rem;
-        }
-
-        .nav-link i {
-            margin-right: 10px;
-            font-size: 1.2rem;
-        }
-
-        .nav-link:hover {
-            background-color: #e9ecef;
-            border-radius: 5px;
-        }
-
-        /* Ensure the offcanvas is on the left side */
-        .offcanvas-start {
-            width: 250px;
-        }
-
-        /* Position the hamburger icon at the top-left of the screen */
-        .navbar-toggler {
-            border: none;
-            background: transparent;
-        }
-
-        .navbar-toggler-icon {
-            font-size: 1.5rem;
-            color: #333;
-        }
-
-        @media (max-width: 767.98px) {
-            /* Align the button to the top-left corner on mobile screens */
-            .navbar-toggler {
-                position: fixed;
-                top: 10px;
-                left: 10px;
-                z-index: 1031;
-            }
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='home_style.css')}}">
 </head>
 <body>
     <div class="container-fluid">
@@ -69,7 +20,7 @@
             </div>
 
             <!-- Sidebar for larger screens / Offcanvas for smaller screens -->
-            <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+            <nav class="col-md-2 d-none d-md-block bg-success sidebar">
                 <ul class="nav flex-column">
                     <li class="nav-item">
                         <a class="nav-link active" href="#">
