--- a/templates/home.html
+++ b/templates/home.html
@@ -5,57 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Boxicons CDN -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='home_style.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='home_style.css') }}">
 </head>
 <body>
     <div class="container-fluid">
         <div class="row">
-            <!-- Toggler for mobile view with Boxicons hamburger icon -->
-            <div class="d-md-none">
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSidebar" aria-controls="offcanvasSidebar">
-                    <i class='bx bx-menu navbar-toggler-icon'></i>
-                </button>
-            </div>
-
-            <!-- Sidebar for larger screens / Offcanvas for smaller screens -->
-            <nav class="col-md-2 d-none d-md-block bg-success sidebar">
-                <ul class="nav flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">
-                            <i class='bx bx-box'></i>
-                            Inventory
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class='bx bx-bell'></i>
-                            Notification
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class='bx bx-cabinet'></i>
-                            Cabinet
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class='bx bx-cog'></i>
-                            Account Settings
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-danger" href="{{ url_for('logout') }}">
-                            <i class='bx bx-log-out'></i>
-                            Logout
-                        </a>
-                    </li>
-                </ul>
+            <!-- Sidebar for large screens -->
+            <nav class="col-lg-2 d-none d-lg-block bg-success sidebar">
+                <div class="sidebar-content">
+                    <h2 class="h4 mb-0">Welcome, {{ user }}!</h2>
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">
+                                <i class='bx bx-box'></i>
+                                Inventory
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class='bx bx-bell'></i>
+                                Notification
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class='bx bx-cabinet'></i>
+                                Cabinet
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class='bx bx-cog'></i>
+                                Accounts
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-danger" href="{{ url_for('logout') }}">
+                                <i class='bx bx-log-out'></i>
+                                Logout
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
 
-            <!-- Offcanvas Sidebar for mobile -->
+            <!-- Offcanvas Sidebar for medium and smaller screens -->
             <div class="offcanvas offcanvas-start d-md-none" tabindex="-1" id="offcanvasSidebar" aria-labelledby="offcanvasSidebarLabel">
                 <div class="offcanvas-header">
                     <h5 class="offcanvas-title" id="offcanvasSidebarLabel">Menu</h5>
@@ -84,7 +79,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">
                                 <i class='bx bx-cog'></i>
-                                Account Settings
+                                Accounts
                             </a>
                         </li>
                         <li class="nav-item">
@@ -98,10 +93,18 @@
             </div>
 
             <!-- Main content -->
-            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Welcome, {{ user }}!</h1>
-                </div>
+            <main class="col-lg-10 ms-sm-auto col-lg-10 px-md-4">
+                <header class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                    <!-- Toggler for medium screens and smaller -->
+                    <div class="d-lg-none">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSidebar" aria-controls="offcanvasSidebar">
+                            <i class='bx bx-menu navbar-toggler-icon'></i>
+                        </button>
+                    </div>
+
+                    <!-- App name -->
+                    <h1 class="h2 mb-0">Electronic Medicine Cabinet</h1>
+                </header>
                 <p>This is your home page content. You can add more sections here as needed.</p>
             </main>
         </div>
