--- a/templates/login.html
+++ b/templates/login.html
@@ -22,15 +22,15 @@
         <form action="{{ url_for('login') }}" method="POST">
           <h1>ELECTRONIC MEDICINE CABINET</h1>
           <div class="input-box">
-            <input type="text" placeholder="Username" class="form-control" id="username" name="username" required>
+            <input type="text" placeholder="Username" class="form-control" id="username" name="username" value="{{ request.cookies.get('username', '') }}" required>
             <i class='bx bxs-user'></i>
           </div>
           <div class="input-box">
-            <input type="password" placeholder="Password" class="form-control" id="password" name="password" required>
-            <i class='bx bxs-lock-alt' ></i>
+            <input type="password" placeholder="Password" class="form-control" id="password" name="password" value="{{ request.cookies.get('password', '') }}" required>
+            <i class='bx bxs-lock-alt'></i>
           </div>
           <div class="remember-forgot">
-            <label><input type="checkbox">Remember Me</label>
+            <label><input type="checkbox" name="remember_me" {% if request.cookies.get('remember_me') %} checked {% endif %}>Remember Me</label>
           </div>
           <button type="submit" class="btn btn-primary">Login</button>
         </form>
