--- a/templates/login.html
+++ b/templates/login.html
@@ -30,16 +30,12 @@
                 </div>
                 <div class="input-box">
                   <input type="password" placeholder="Password" name="password" required value="{{ request.cookies.get('password', '') }}">
-                    <i class='bx bx-lock'></i>
+                  <i class='bx bx-hide' id="togglePassword"></i>
                 </div>
-                <div class="remember-forgot">
+                <div class="remember-me">
                   <label><input type="checkbox" name="remember_me" {% if request.cookies.get('remember_me') %} checked {% endif %}> Remember Me</label>
-                    <a href="#">Forgot Password?</a>
                 </div>
                 <button type="submit" class="btn">Login</button>
-                <div class="register-link">
-                    <p>Don't have an account? <a href="#">Register</a></p>
-                </div>
             </form>
         </div>
     </div>
@@ -53,6 +49,17 @@
               const newUrl = window.location.pathname + '?' + urlParams.toString();
               window.history.replaceState({}, document.title, newUrl);
           }
+      });
+      const togglePassword = document.querySelector('#togglePassword');
+      const password = document.querySelector('#password');
+
+      togglePassword.addEventListener('click', function () {
+          // Toggle the type attribute
+          const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
+          password.setAttribute('type', type);
+          
+          // Toggle the eye icon
+          this.classList.toggle('bx-show');
       });
   </script>
 </body>
