binalik ang background

--- a/static/login_style.css
+++ b/static/login_style.css
@@ -9,7 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: red;
+    background: url('/static/bg.jpg') no-repeat;
     background-size: cover;
     background-position: center;
     margin: 0;
