--- a/templates/home.html
+++ b/templates/home.html
@@ -130,11 +130,23 @@
                 })
                 .catch(error => console.error('Error loading content:', error));
         }
-
         // Automatically load Inventory when the page is first loaded
         document.addEventListener("DOMContentLoaded", function() {
             loadContent('inventory', 'inventory-link', 'offcanvas-inventory-link');
         });
+        // Event Listener for Window Resize
+        function checkScreenSizeAndCloseOffcanvas() {
+            const offcanvasSidebar = document.getElementById('offcanvasSidebar');
+            const bsOffcanvas = bootstrap.Offcanvas.getInstance(offcanvasSidebar);
+            //Function when the screen is currently on smally
+            if (window.innerWidth >= 992) { // 992px is the breakpoint for lg (large screens)
+                if (bsOffcanvas && bsOffcanvas._isShown) {
+                    bsOffcanvas.hide(); // Close the offcanvas if it's shown
+                }
+            }
+        }
+        // Attach the resize event listener
+        window.addEventListener('resize', checkScreenSizeAndCloseOffcanvas);
     </script>
 </body>
 </html>
