remove container fluid to maximize the space

--- a/templates/home.html
+++ b/templates/home.html
@@ -92,15 +92,13 @@
             </div>
 
             <!-- Main content area -->
-            <main class="col-lg-10 ms-sm-auto col-lg-10" style="padding-top: 0;"> <!-- Added inline padding-top: 0 -->
-                <header class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom" style="margin-bottom: 0;"> <!-- Removed pt-3 -->
-                    <div class="d-lg-none">
+            <main class="col-lg-10 col-md-12" style="padding-top: 0;">
+                <div class="d-lg-none">
                         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSidebar" aria-controls="offcanvasSidebar">
                             <i class='bx bx-menu navbar-toggler-icon'></i>
                         </button>
                     </div>
-                </header>
-                <!-- Load the default content here -->
+                                    <!-- Load the default content here -->
                 <div id="main-content">
                     {% include content %}
                 </div>
