--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -58,7 +58,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div>
 
         <div class="tab-content" id="inventory-tabs">
             <!-- Medicine Inventory Tab -->
