--- a/templates/home.html
+++ b/templates/home.html
@@ -82,7 +82,8 @@
                             </a>
                         </li>
                         <li class="nav-item sidebar-footer">
-                            <a class="nav-link text-danger" href="{{ url_for('logout') }}">
+                            <a class="nav-link 
+                            text-danger" href="{{ url_for('logout') }}">
                                 <i class='bx bx-log-out'></i>
                                 Logout
                             </a>
